force-app/main/default/objects/Training_Audience__c/Training_Audience__c.object-meta.xml
<CustomObject>
    <label>Training Audience</label>
    <nameField><displayFormat>TA-{00000}</displayFormat><label>Audience Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Training Audiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>