force-app/main/default/objects/Training_Audience__c/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName><label>Audience Type</label><required>true</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>User</fullName><default>true</default><label>User</label></value>
        <value><fullName>Profile</fullName><default>false</default><label>Profile</label></value>
        <value><fullName>LogicLearn Group</fullName><default>false</default><label>LogicLearn Group</label></value>
    </valueSetDefinition></valueSet>
</CustomField>