force-app/main/default/objects/Training_Audience__c/fields/Excluded__c.field-meta.xml
<CustomField>
    <fullName>Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded</label>
    <type>Checkbox</type>
</CustomField>