force-app/main/default/objects/Training_Audience__c/fields/LogicLearn_Group__c.field-meta.xml
<CustomField>
    <fullName>LogicLearn_Group__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>LogicLearn Group</label><referenceTo>Training_Group__c</referenceTo>
    <relationshipLabel>Training Audiences</relationshipLabel><relationshipName>Training_Audiences</relationshipName><required>false</required><type>Lookup</type>
</CustomField>