force-app/main/default/objects/Training_Audience__c/fields/Profile_Id__c.field-meta.xml
<CustomField><fullName>Profile_Id__c</fullName><label>Profile Id</label><length>18</length><required>false</required><type>Text</type></CustomField>