force-app/main/default/objects/Training_Audience__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName><label>Purpose</label><required>true</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Visibility</fullName><default>true</default><label>Visibility</label></value>
        <value><fullName>Required</fullName><default>false</default><label>Required</label></value>
        <value><fullName>Notification</fullName><default>false</default><label>Notification</label></value>
    </valueSetDefinition></valueSet>
</CustomField>