force-app/main/default/objects/Training_Audience__c/fields/Training_Video__c.field-meta.xml
<CustomField>
    <fullName>Training_Video__c</fullName><label>Training Video</label><referenceTo>Training_Video__c</referenceTo>
    <relationshipLabel>Audiences</relationshipLabel><relationshipName>Audiences</relationshipName>
<type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead>
</CustomField>