force-app/main/default/objects/Training_Audience__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>User</label><referenceTo>User</referenceTo>
    <relationshipLabel>Training Audiences</relationshipLabel><relationshipName>Training_Audiences</relationshipName><required>false</required><type>Lookup</type>
</CustomField>